# Repo_foundry

./: .env.example  .gitignore  AGENTS.md  AGENT_CONTEXT.md  AGENT_CYCLE_LOG.md  ARCHITECTURE.md  DECISIONS.md  KNOWN_ISSUES.md  Makefile  NEXT_STEPS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.codebase-memory/: artifact.json  graph.db.zst
agents/: founder-strategist.md  pr-reviewer-debugger.md  repo-architect.md  repo-builder.md  research-scout-reporter.md
blueprints/: example-repo.yaml  schema.json
contracts/: AUTONOMOUS_COMPLETION_LOOP_CONTRACT.md  AUTONOMOUS_GOAL_CONTROL_CONTRACT.md  DASHBOARD_DIRECTION_CONTROL_CONTRACT.md  PRODUCT_GALLERY_CONTRACT.md
docs/: agent-cycle-log.md  asset-branch-note.md  autonomous-completion-loop.md  autonomous-direction.md  completion-loop-final.md  completion-loop-last.md  completion-loop-pr.md  completion-loop-readme.md  completion-loop-summary.md  completion-loop.md  github-credential-preflight.md  iphone-dashboard.md  pr-status-snapshots.md  research-scout-backlog.md  windows-setup.md
policies/: auto-merge.yaml  autonomous-completion-policy.example.yml  autonomous-completion-policy.json
registry/: products.yaml  repos.yaml
repo_foundry/: __init__.py  agent_activity.py  api.py  audit.py  blueprints.py  completion_log.py  completion_policy.py  cycle_logs.py  cycle_summary.py  db.py  directions.py  executor.py  github_client.py  health.py  merge_executor.py  mission_control.py  models.py  operator_access.py  pr_monitor.py  pr_status.py  product_quality.py  product_registry.py  product_showcase.py  reconcile.py  (+5 more)
(+51 files in other folders)
